--- a/style.css
+++ b/style.css
@@ -3,3 +3,50 @@ canvas{
     top: 0;
     left: 0;
 }
+*{
+    margin: 0;
+    padding: 0%;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.logo{
+    flex-basis: 20%;
+}
+.logo titlelogo{
+    position: fixed;
+    font-size: 20px;
+    color: #fff;
+    font-family: montserrat, sans-serif;
+    font-weight: bold;
+    top: 0%; 
+    left: 20px;
+    margin-top: 10px;
+}
+nav{
+    width: 100%;
+    display: flex;
+    flex-basis: 20%;
+    position: fixed;
+    top: 0px;
+    overflow: hidden;
+    background-color: #333;
+    flex-direction: row-reverse;
+}
+
+.navbar {
+    float: left;
+    overflow: hidden;
+    
+    background-color: #333;
+}
+.navbar a {
+    float: left;
+    font-size: 16px;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+.info{
+    text-align: center;
+    color: white;
+}
